--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,10 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+venv
+venvWSL
+.idea
+.vscode
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
